# epen-sgcell-thesis

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  tream analysis workflow"
config/: analysis.yaml
metadata/: annotation_mapping.tsv  cell_cycle_s_genes.txt  input_contract.md  marker_panels.tsv  samples.tsv  studies.tsv
reports/: figure_provenance.md  reference_harmony_report.tsv  reference_norm_pca_report.tsv  reference_qc_report.tsv  thesis_alignment.md
src/ependymoma/: __init__.py  annotation.py  cli.py  clustering.py  config.py  copykat.py  differential_expression.py  enrichment.py  figures.py  integration.py  io.py  normalization.py  qc.py
tests/: test_annotation.py  test_manifest.py  test_no_upstream_code.py
