[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ependymoma-downstream"
version = "0.1.0"
description = "Scanpy-to-annotation workflow for a multi-study ependymoma scRNA-seq thesis"
requires-python = ">=3.11"
dependencies = [
  "anndata>=0.10",
  "gseapy>=1.1",
  "harmonypy>=0.0.10",
  "igraph>=0.11",
  "leidenalg>=0.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scanpy>=1.10",
  "scipy>=1.11",
]

[project.optional-dependencies]
cnv = ["infercnvpy>=0.6", "rpy2>=3.5"]
deviance = ["anndata2ri>=1.3", "rpy2>=3.5"]
test = ["pytest>=8"]

[project.scripts]
ependymoma-analysis = "ependymoma.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
